[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/ui/MenuButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/main menu/Load.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui/font_size_40.tres" type="DynamicFont" id=3]

[node name="Load" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="RichTextLabel" parent="."]
margin_right = 200.0
margin_bottom = 60.0
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "LOAD SAVE"
text = "LOAD SAVE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="."]
margin_top = 100.0
margin_right = 75.0
margin_bottom = 315.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons"]
margin_right = 74.0
margin_bottom = 211.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save0" parent="Buttons/VBoxContainer" instance=ExtResource( 1 )]
margin_right = 74.0
margin_bottom = 39.0

[node name="Save1" parent="Buttons/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 43.0
margin_right = 74.0
margin_bottom = 82.0

[node name="Save2" parent="Buttons/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 86.0
margin_right = 74.0
margin_bottom = 125.0

[node name="Save3" parent="Buttons/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 129.0
margin_right = 74.0
margin_bottom = 168.0

[node name="Save4" parent="Buttons/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 172.0
margin_right = 74.0
margin_bottom = 211.0

[node name="Back" parent="." instance=ExtResource( 1 )]
margin_top = 580.0
margin_right = 74.0
margin_bottom = 619.0
custom_fonts/font = ExtResource( 3 )
text = "<BACK"
[connection signal="pressed" from="Buttons/VBoxContainer/Save0" to="." method="_on_Save0_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Save1" to="." method="_on_Save1_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Save2" to="." method="_on_Save2_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Save3" to="." method="_on_Save3_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Save4" to="." method="_on_Save4_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
